# pprl-client

./: README.md  pyproject.toml
.github/workflows/: test.yml
pprl_client/: __init__.py  _cli.py  _client.py  _estimate.py  _model.py  main.py  types.py
tests/: conftest.py  helpers.py  test_cli.py  test_client.py  test_estimate.py
