[project]
name = "pprl-client"
version = "0.4.0"
description = "HTTP-based client for interacting with a service for privacy-preserving record linkage with Bloom filters."
authors = [
    {name = "Maximilian Jugl", email = "Maximilian.Jugl@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "httpx (>=0.28.0,<0.29.0)",
    "click (>=8.0.0,<9.0.0)",
    "pprl-model (>=0.1.6,<0.2.0)",
    "pprl-core (>=0.1.4,<0.2.0)"
]
license = "MIT"
keywords = ["record linkage", "privacy", "bloom filter", "bitarray", "cryptography", "service", "client", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
pprl = "pprl_client.main:run_cli"

[project.optional-dependencies]
faker = [ "faker (>=26.0.0)" ]

[project.urls]
repository = "https://github.com/ul-mds/pprl-client"

[tool.poetry]
packages = [{ include = "pprl_client" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]
env_files = [
    ".env.test",
    ".env"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
pytest = ">=8.3.0"
testcontainers = "^4.9.2"
pytest-dotenv = "^0.5.2"
